2009-07-09:
===========

- Improved multi-language support by changing the language-related options in 
the configuration file.
- Improved the TinyMCE plugin to properly determine the language of TinyMCE and 
use the same language in PaintWeb.
- Removed the need to tell PaintWeb the baseFolder - where the script is 
located. PaintWeb now determines its own location automatically.
- Hacked around the issue of failed PaintWeb loads - the 'load' event for script 
elements is not always properly dispatched in all the supported browsers. Now 
PaintWeb uses XHR to load and eval() the JS files. Uh-oh.
- Fixed a bug the English language file.
- Wrote a script which converts PaintWeb JSON language files to Moodle PHP 
language files.

2009-07-06:
===========

- More work on the TinyMCE plugin. Now PaintWeb can be started from the context 
menu, and from a new overlay button which shows on top of the editable image.
- New configuration options for the TinyMCE plugin.
- New API for showing/hiding the PaintWeb GUI.
- Changed the About/Help icon to be a "PaintWeb" icon. Olli suggested it's not 
appropriate to show a Help icon when there's no context help. Thanks!
- Minor corrections and some more error checks in PaintWeb with regards to the 
loading of external images.
- Added support for the TinyMCE plugin in the Makefile. Now the make process 
also generates the editor_plugin.js - a minified version of the 
editor_plugin_src.js file.

2009-07-04:
===========

- Implemented a new core function: PaintWeb.imageLoad().
- Initial implementation of the TinyMCE plugin which nicely integrates PaintWeb 
into TinyMCE. It works well in Opera, Firefox and Chrome. Remaining work is to 
make it less ... flimsy, less error prone. Note that image save also works!

2009-07-02:
===========

- Further work on packaging and jsdoc API reference. Everything should be 
working fine now.
- jsdoc comment fixes across several files.

2009-07-01:
===========
