@@ -6,7 +6,7 @@
     <link rel="author" type="text/html" href="http://www.robodesign.ro" 
     title="Marius and Mihai Şucan, ROBO Design">
     <!-- $URL: http://code.google.com/p/paintweb $
-         $Date: 2009-07-09 16:33:48 +0300 $ -->
+         $Date: 2009-07-15 17:34:55 +0300 $ -->
 
     <!-- This demo requires you to have TinyMCE. -->
     <script type="text/javascript" 
@@ -56,7 +56,8 @@ tinyMCE.init({
 
       &lt;p&gt;&lt;a title=&#34;Freshalicious&#34; 
         href=&#34;http://www.robodesign.ro/marius/my-projects/images/freshalicious&#34;&gt;&lt;img 
-        src=&#34;freshalicious.jpg&#34; alt=&#34;Freshalicious&#34;&gt;&lt;/a&gt;&lt;/p&gt;
+        src=&#34;freshalicious.jpg&#34; 
+        alt=&#34;Freshalicious&#34;&gt;&lt;/a&gt;&lt;/p&gt;
 
       &lt;p&gt;
       Nam nisi elit, cursus in rhoncus sit amet, pulvinar laoreet leo. Nam sed lectus quam, ut sagittis tellus. Quisque dignissim mauris a augue rutrum tempor. Donec vitae purus nec massa vestibulum ornare sit amet id tellus. Nunc quam mauris, fermentum nec lacinia eget, sollicitudin nec ante. Aliquam molestie volutpat dapibus. Nunc interdum viverra sodales. Morbi laoreet pulvinar gravida. Quisque ut turpis sagittis nunc accumsan vehicula. Duis elementum congue ultrices. Cras faucibus feugiat arcu quis lacinia. In hac habitasse platea dictumst. Pellentesque fermentum magna sit amet tellus varius ullamcorper. Vestibulum at urna augue, eget varius neque. Fusce facilisis venenatis dapibus. Integer non sem at arcu euismod tempor nec sed nisl. Morbi ultricies, mauris ut ultricies adipiscing, felis odio condimentum massa, et luctus est nunc nec eros.
