@@ -18,7 +18,7 @@
  * along with PaintWeb.  If not, see <http://www.gnu.org/licenses/>.
  *
  * $URL: http://code.google.com/p/paintweb $
- * $Date: 2009-07-10 14:14:20 +0300 $
+ * $Date: 2009-07-13 13:38:40 +0300 $
  */
 
 // This script allows you to convert PaintWeb JSON language files into Moodle 
@@ -36,7 +36,7 @@
 // Warning: running this script will overwrite "paintweb.php" in your Moodle 
 // lang/*/ folders.
 
-$paintwebLangDir = '../../src/lang';
+$paintwebLangDir = '../../build/lang';
 $moodleLangDir = '../../../../lang';
 $moodleLangFile = 'paintweb.php';
 
