@@ -18,7 +18,7 @@
  * along with PaintWeb.  If not, see <http://www.gnu.org/licenses/>.
  *
  * $URL: http://code.google.com/p/paintweb $
- * $Date: 2009-07-10 17:37:52 +0300 $
+ * $Date: 2009-07-13 13:38:53 +0300 $
  */
 
 // This script allows you to convert a Moodle PHP language file into a PaintWeb 
@@ -32,7 +32,7 @@
 // Warning: running this script will overwrite the JSON language file from the 
 // PaintWeb language folder.
 
-$paintwebLangDir = '../../src/lang';
+$paintwebLangDir = '../../build/lang';
 $moodleLangDir = '../../../../lang';
 $moodleLangFile = 'paintweb.php';
 
