@@ -1,3 +1,13 @@
+2009-07-15:
+===========
+
+- Added support for generating the tags file for the PaintWeb source, in the 
+Makefile. Just write "make tags".
+- Improved the PaintWeb.tar.bz2 package generated by the Makefile: now all the 
+files are inside the "paintweb" folder.
+- The language convert scripts for Moodle now use the PaintWeb build folder.
+- Minor fix for the TinyMCE plugin.
+
 2009-07-09:
 ===========
 
